<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mensa投资</string>
    <!-- home TactionBar -->
    <string name="news">新闻</string>
    <string name="details_title">详细内容</string>
    <string name="quote">行情</string>
    <string name="quotetitle">全球股市行情</string>
    <string name="special_colunm">专栏</string>
    <string name="question">提问</string>
    <string name="about">关于</string>
    <!--  -->
    <string name="quit_tip">再按一次退出程序</string>
    <string name="content">content</string>
    <!-- toast -->
    <string name="init_app_error">连接服务器失败，请稍后再试</string>
    <string name="get_news_error">获取新闻失败，请稍后再试</string>
    <string name="get_news_details_error">获取新闻详情失败</string>
    <string name="get_quotes_error">获取行情信息失败</string>
    <string name="net_un_available">没有可用网络，请检查网络连接</string>
    <string name="get_specialcolumn_error">获取专栏信息失败</string>
    <string name="get_data_error">获取数据失败</string>
    <string name="sub_question_ok">问题提交成功</string>
    <string name="sub_question_error">问题提交失败:</string>
    <!-- Quote -->
    <string name="quote_title">名称</string>
    <string name="quote_price">最新</string>
    <string name="quote_change_amount">涨跌额</string>
    <string name="quote_change_price">涨跌幅</string>

    <!-- Chinese Market -->
    <string name="chinese_m_1">上证指数</string>
    <string name="chinese_m_2">深证成指</string>
    <string name="chinese_m_3">沪深300</string>
    <string name="chinese_m_4">中小板指</string>
    <string name="chinese_m_5">创业板指</string>
    <!-- hint -->
    <string name="input_question">在这里输入您的问题</string>
    <string name="allow">接受回访(免费)</string>
    <string name="submit_question">提交问题</string>
    <string name="question_article">问题详情</string>
    <!--  -->
    <string name="app_version">Version 1.3</string>
    <string name="about_head">看财经网 定制版 </string>
    <string name="my_question">"  我的问题"</string>
    <string name="check_update">"  检测新版本"</string>
    <string name="app_liecence">"  软件使用协议"</string>
    <string name="feedback">"  意见反馈"</string>
    <string name="touzi">"  访问 MENSA投资 的网站"</string>
    <string name="webtitle">移动客户端由 MENSA投资 运营</string>
    <string name="shengming">免责声明:KANCJ.com看财经网不对本移动客户端内的信息或因依靠此信息所采取的任何行动负责。市场有风险，投资需谨慎</string>
    <string name="clear_cache">"  清除缓存"</string>
    <string name="login">"  登录"</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_password2">确认密码</string>
    <string name="not_login">请先登录</string>
    <string name="username_too_short">用户名长度至少为2个字符</string>
    <string name="password_too_short">密码长度至少为6个字符</string>
    <string name="password_not_equal">两次输入的密码不一样</string>
    <string name="login_ok">登录成功</string>
    <string name="login_error">登录失败</string>
    <string name="register_ok">注册成功</string>
    <string name="register_error">注册失败</string>
    <string name="register">注册</string>
    <string name="remember">记住账号</string>
    <string name="logout">"  注销"</string>
    <string name="mianzeshengming"></string>
    <string name="no_update">已是最新版本，无需更新</string>
    <string name="cache_cleared">缓存已经清空啦</string>
    <!--  -->
    <string name="ok">确定</string>
    <string name="notification">通知</string>
    <string name="feed_success">感谢您的反馈，您的意见对我们很重要</string>
    <string name="feed_failed">提交失败,请稍后再试</string>
    <string name="hint_feed_email">请输入您的邮箱</string>
    <string name="hint_feed_content">具体反馈意见</string>
    <string name="feed_submit">提交意见</string>
    <string name="feed_not_null">邮箱或者反馈意见不能为空</string>

</resources>