<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/head"
        style="@style/AppHead" >

        <TextView
            style="@style/HeadTitle"
            android:text="@string/login" />
    </RelativeLayout>

    <EditText
        android:id="@+id/login_ed_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/hint_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/login_ed_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/login_cb_remember"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/remember" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/selector_btn_green"
        android:padding="14dp"
        android:text="@string/login" />

</LinearLayout>