<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/AppHead" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedback"
            android:textColor="@color/white" />
    </RelativeLayout>

    <Spinner
        android:id="@+id/feed_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/feed_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint_feed_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/feed_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="left|top"
        android:hint="@string/hint_feed_content"
        android:lines="4" />

    <Button
        android:id="@+id/feed_btn_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/selector_btn_green"
        android:padding="10dp"
        android:text="@string/feed_submit" />

</LinearLayout>