<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <com.mensa.view.widget.TationBar
        android:id="@+id/home_tactionbar"
        style="@style/home_TactionBar"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <com.mensa.view.widget.Tab
            style="@style/home_TactionBarTab"
            android:layout_weight="1"
            android:checked="false"
            android:drawableTop="@drawable/test_tab"
            android:text="@string/news" />

        <com.mensa.view.widget.Tab
            style="@style/home_TactionBarTab"
            android:layout_weight="1"
            android:drawableTop="@drawable/test_tab"
            android:text="@string/quote" />

        <com.mensa.view.widget.Tab
            style="@style/home_TactionBarTab"
            android:layout_weight="1"
            android:drawableTop="@drawable/test_tab"
            android:text="@string/special_colunm" />

        <com.mensa.view.widget.Tab
            style="@style/home_TactionBarTab"
            android:layout_weight="1"
            android:drawableTop="@drawable/test_tab"
            android:text="@string/question" />

        <com.mensa.view.widget.Tab
            style="@style/home_TactionBarTab"
            android:layout_weight="1"
            android:drawableTop="@drawable/test_tab"
            android:text="@string/settings" />
    </com.mensa.view.widget.TationBar>

    <android.support.v4.view.ViewPager
        android:id="@+id/home_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/home_tactionbar" />

</RelativeLayout>