<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/AppHead" >

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:progressDrawable="@drawable/loading_light_01"
            android:visibility="invisible" />

        <TextView
            style="@style/HeadTitle"
            android:text="@string/quote" />

        <Button
            android:id="@+id/frag_quote_areas_btn"
            style="@style/HeadSpinner"
            android:layout_centerVertical="true"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/frag_quote_list_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingTop="6dp" >

        <TextView
            android:id="@+id/quote_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:singleLine="true"
            android:text="@string/quote_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quote_item_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/quote_price"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quote_item_changeA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/quote_change_amount"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quote_item_changeP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/quote_change_price"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/frag_quote_lv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#0000"
        android:clickable="false"
        android:focusable="false"
        android:listSelector="@android:color/transparent" />

</LinearLayout>