<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout style="@style/AppHead" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/about"
                android:textColor="@color/white" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/shape_round"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_version" />

            <TextView
                android:id="@+id/about_website"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center_horizontal"
                android:text="移动客户端由 MENSA 运营" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/about_touzi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_top"
                android:padding="6dp"
                android:text="@string/visit_site" />

            <TextView
                android:id="@+id/about_my_question"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_bottom"
                android:padding="6dp"
                android:text="@string/my_question" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/about_check_update"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_top"
                android:text="@string/check_update" />

            <TextView
                android:id="@+id/about_liencence"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_middle"
                android:text="@string/app_liecence" />

            <TextView
                android:id="@+id/about_feedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_bottom"
                android:text="@string/feedback" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>