<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/expert_details_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/head"
        style="@style/AppHead"
        android:layout_alignParentTop="true" >

        <ImageButton
            android:id="@+id/expert_details_back"
            style="@style/ButtonBack" />

        <TextView
            style="@style/HeadTitle"
            android:text="@string/question" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:progressDrawable="@drawable/loading_light_01"
            android:visibility="invisible" />
        <ImageButton
            android:id="@+id/expert_details_refresh"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:src="@drawable/ic_refresh"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/expert_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head"
        android:layout_marginTop="6dp"
        android:orientation="horizontal" >

        <com.mensa.view.widget.AsyncImageView
            android:id="@+id/expert_details_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:contentDescription="@null"
            android:maxHeight="96dp"
            android:maxWidth="96dp"
            android:minHeight="72dp"
            android:minWidth="72dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/expert_details_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/expert_details_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/expert_details_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/expert_details_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/expert_info"
        android:layout_margin="16dp"
        android:clickable="false"
        android:drawableLeft="@drawable/img_phone"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/expert_details_question"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/question" />

        <EditText
            android:id="@+id/submit_question_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left|top"
            android:hint="@string/input_question"
            android:lines="3" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/submit_question_allow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/allow" />

            <Button
                android:id="@+id/submit_question_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_question" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/expert_details_lv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/expert_details_question"
        android:layout_below="@id/expert_details_phone"
        android:cacheColorHint="#0000" />

</RelativeLayout>